--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ font-size:28px;}
 <h1 align="Centre">Pemu Iroro Alexandra <b></h1>
 <p align="right"> Ajebo Housing Estate,<br/> Idi-Aba, Abeokuta,<br/>Ogun State,<br/> Nigeria.
 <br/>08132791944 <br/>pemuiroro@gmail.com <br/> <hr width"15%"/>
-
+<img  src="https://res.cloudinary.com/pemualexandra/image/upload/v1566641587/IMG_20190417_151731_1_qy85gh.jpg"
+height= "150px" width="150px"/>
 <h2>OBJECTIVES<b></h2>
 <p align="left"> To improve my skills to meet international standards <br/> 
 and make a difference in the medical sector through 
