--- a/IRORO.html
+++ b/IRORO.html
@@ -2,10 +2,7 @@
 <head>
 </head>
 <body> <h1 align="Centre">Pemu Iroro Alexandra <b></h1>
-<p align="right"> Ajebo Housing Estate,<br/> Idi-Aba, Abeokuta,<br/>Ogun State,<br/> Nigeria.
-<br/>08132791944 <br/>pemuiroro@gmail.com <br/> <hr width"15%"/>
-<img src="https://res.cloudinary.com/pemualexandra/image/upload/v1566641587/IMG_20190417_151731_1_qy85gh.jpg" 
-height="200px" width="200px"/></p>
+<p align="right"> <br/>pemuiroro@gmail.com <br/> <hr width"15%"/>
 
 <h2><font color="#0000FF">OBJECTIVES</font><b></h2>
 <p align="left"> To improve my skills to meet international standards <br/> 
@@ -26,8 +23,8 @@ technology <br/> <hr width"15%"/></p>
 </tr>
 <tr>
 <td>JOB DESCRIPTION</td>
-<td> I work as a research assistant and double as a doctor’s assistant during medical procedures.<br/> 
-I ensure patient’s results are properly typed and documented.</td>
+<td> I work as a research assistant and double as a doctorâ€™s assistant during medical procedures.<br/> 
+I ensure patientâ€™s results are properly typed and documented.</td>
 <br/> <hr width"15%"/>
 </table>
 <h2><font color="#0000FF">EDUCATION </font></h2>
